[project]
name = "comfyui-jitblockswap"
description = "Block Swap (RAM Offload) node for native ComfyUI MODEL - run DiT models larger than VRAM by streaming transformer blocks from system RAM."
version = "0.2.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/lovemachine100/ComfyUI-JITBlockSwap"

[tool.comfy]
PublisherId = "kongo_jun"
DisplayName = "ComfyUI-JITBlockSwap"
Icon = ""
